# MinervAI

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/minervai/: __init__.py  app.py  chain.py  chemrxiv_utils.py  data.py  xrxiv_utils.py
